--- a/index.html
+++ b/index.html
@@ -40,37 +40,30 @@
       <!-- Timeblocks go here -->
       <div class="timebox">
         <div class="column-start">
-          <h6 class="time">9:00AM</h6>
+          <h6 class="time">9:00pm</h6>
         </div>
         <div class="column-main">
           <textarea id="story" class="story" name="story" rows="5" cols="33">
           </textarea>
+        </div>
+        <div class="column-end">
+          <a class="0" href="">
+            <i class="fas fa-sd-card fa-4x"></i>
+          </a>
+        </div>
+      </div>
 
-          <i class="fa-solid fa-floppy-disk"></i>
-        </div>
-        <div class="column-end">
-          <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-          <path
-            d="M224 256c-35.2 0-64 28.8-64 64c0 35.2 28.8 64 64 64c35.2 0 64-28.8 64-64C288 284.8 259.2 256 224 256zM433.1 129.1l-83.9-83.9C341.1 37.06 328.8 32 316.1 32H64C28.65 32 0 60.65 0 96v320c0 35.35 28.65 64 64 64h320c35.35 0 64-28.65 64-64V163.9C448 151.2 442.9 138.9 433.1 129.1zM128 80h144V160H128V80zM400 416c0 8.836-7.164 16-16 16H64c-8.836 0-16-7.164-16-16V96c0-8.838 7.164-16 16-16h16v104c0 13.25 10.75 24 24 24h192C309.3 208 320 197.3 320 184V83.88l78.25 78.25C399.4 163.2 400 164.8 400 166.3V416z"
-          />
-        </svg> -->
-          <a class="save" href="">
-            <i class="fas fa-sd-card fa-4x"></i>
-          </a>
-          <!-- <i class="fa-solid fa-floppy-disk"></i> -->
-        </div>
-      </div>
       <!-- Timeblocks go here -->
       <div class="timebox">
         <div class="column-start">
-          <h6>10:00AM</h6>
+          <h6 class="time">10:00am</h6>
         </div>
         <div class="column-main">
           <textarea id="story" class="story" name="story" rows="5" cols="33">
           </textarea>
         </div>
         <div class="column-end">
-          <a class="save" href="">
+          <a class="1" href="">
             <i class="fas fa-sd-card fa-4x"></i>
           </a>
         </div>
@@ -78,25 +71,106 @@
       <!-- Timeblocks go here -->
       <div class="timebox">
         <div class="column-start">
-          <h6>9:00AM</h6>
+          <h6 class="time">11:00am</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" name="story" rows="5" cols="33"> </textarea>
+          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          </textarea>
         </div>
         <div class="column-end">
-          <i class="fas fa-sd-card fa-4x"></i>
+          <a class="2" href="">
+            <i class="fas fa-sd-card fa-4x"></i>
+          </a>
         </div>
       </div>
       <!-- Timeblocks go here -->
       <div class="timebox">
         <div class="column-start">
-          <h6>9:00AM</h6>
+          <h6 class="time">12:00pm</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" name="story" rows="5" cols="33"> </textarea>
+          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          </textarea>
         </div>
         <div class="column-end">
-          <i class="fas fa-sd-card fa-4x"></i>
+          <a class="3" href="">
+            <i class="fas fa-sd-card fa-4x"></i>
+          </a>
+        </div>
+      </div>
+      <!-- Timeblocks go here -->
+      <div class="timebox">
+        <div class="column-start">
+          <h6 class="time">1:00pm</h6>
+        </div>
+        <div class="column-main">
+          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          </textarea>
+        </div>
+        <div class="column-end">
+          <a class="4" href="">
+            <i class="fas fa-sd-card fa-4x"></i>
+          </a>
+        </div>
+      </div>
+      <!-- Timeblocks go here -->
+      <div class="timebox">
+        <div class="column-start">
+          <h6 class="time">2:00pm</h6>
+        </div>
+        <div class="column-main">
+          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          </textarea>
+        </div>
+        <div class="column-end">
+          <a class="5" href="">
+            <i class="fas fa-sd-card fa-4x"></i>
+          </a>
+        </div>
+      </div>
+      <!-- Timeblocks go here -->
+      <div class="timebox">
+        <div class="column-start">
+          <h6 class="time">3:00pm</h6>
+        </div>
+        <div class="column-main">
+          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          </textarea>
+        </div>
+        <div class="column-end">
+          <a class="6" href="">
+            <i class="fas fa-sd-card fa-4x"></i>
+          </a>
+        </div>
+      </div>
+      <!-- Timeblocks go here -->
+      <div class="timebox">
+        <div class="column-start">
+          <h6 class="time">4:00pm</h6>
+        </div>
+        <div class="column-main">
+          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          </textarea>
+        </div>
+        <div class="column-end">
+          <a class="7" href="">
+            <i class="fas fa-sd-card fa-4x"></i>
+          </a>
+        </div>
+      </div>
+      <!-- Timeblocks go here -->
+      <div class="timebox">
+        <div class="column-start">
+          <h6 class="time">5:00pm</h6>
+        </div>
+        <div class="column-main">
+          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          </textarea>
+        </div>
+        <div class="column-end">
+          <a class="8" href="">
+            <i class="fas fa-sd-card fa-4x"></i>
+          </a>
         </div>
       </div>
     </div>
