final edits, fixed event handler error message, added border close on text area focus

--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
           <h6 class="time">9:00pm</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          <textarea id="story" class="story" name="story" rows="4" cols="40">
           </textarea>
         </div>
         <div class="column-end">
-          <a class="0" href="">
-            <i class="fas fa-sd-card fa-4x"></i>
-          </a>
+          <div class="buttonclass">
+            <a class="0" href="">
+              <i class="fas fa-sd-card fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
 
@@ -59,13 +61,15 @@
           <h6 class="time">10:00am</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          <textarea id="story" class="story" name="story" rows="4" cols="40">
           </textarea>
         </div>
         <div class="column-end">
-          <a class="1" href="">
-            <i class="fas fa-sd-card fa-4x"></i>
-          </a>
+          <div class="buttonclass">
+            <a class="1" href="">
+              <i class="fas fa-sd-card fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
       <!-- Timeblocks go here -->
@@ -74,13 +78,15 @@
           <h6 class="time">11:00am</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          <textarea id="story" class="story" name="story" rows="4" cols="40">
           </textarea>
         </div>
         <div class="column-end">
-          <a class="2" href="">
-            <i class="fas fa-sd-card fa-4x"></i>
-          </a>
+          <div class="buttonclass">
+            <a class="2" href="">
+              <i class="fas fa-sd-card fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
       <!-- Timeblocks go here -->
@@ -89,13 +95,15 @@
           <h6 class="time">12:00pm</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          <textarea id="story" class="story" name="story" rows="4" cols="40">
           </textarea>
         </div>
         <div class="column-end">
-          <a class="3" href="">
-            <i class="fas fa-sd-card fa-4x"></i>
-          </a>
+          <div class="buttonclass">
+            <a class="3" href="">
+              <i class="fas fa-sd-card fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
       <!-- Timeblocks go here -->
@@ -104,13 +112,15 @@
           <h6 class="time">1:00pm</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          <textarea id="story" class="story" name="story" rows="4" cols="40">
           </textarea>
         </div>
         <div class="column-end">
-          <a class="4" href="">
-            <i class="fas fa-sd-card fa-4x"></i>
-          </a>
+          <div class="buttonclass">
+            <a class="4" href="">
+              <i class="fas fa-sd-card fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
       <!-- Timeblocks go here -->
@@ -119,13 +129,15 @@
           <h6 class="time">2:00pm</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          <textarea id="story" class="story" name="story" rows="4" cols="40">
           </textarea>
         </div>
         <div class="column-end">
-          <a class="5" href="">
-            <i class="fas fa-sd-card fa-4x"></i>
-          </a>
+          <div class="buttonclass">
+            <a class="5" href="">
+              <i class="fas fa-sd-card fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
       <!-- Timeblocks go here -->
@@ -134,13 +146,15 @@
           <h6 class="time">3:00pm</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          <textarea id="story" class="story" name="story" rows="4" cols="40">
           </textarea>
         </div>
         <div class="column-end">
-          <a class="6" href="">
-            <i class="fas fa-sd-card fa-4x"></i>
-          </a>
+          <div class="buttonclass">
+            <a class="6" href="">
+              <i class="fas fa-sd-card fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
       <!-- Timeblocks go here -->
@@ -149,13 +163,15 @@
           <h6 class="time">4:00pm</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          <textarea id="story" class="story" name="story" rows="4" cols="40">
           </textarea>
         </div>
         <div class="column-end">
-          <a class="7" href="">
-            <i class="fas fa-sd-card fa-4x"></i>
-          </a>
+          <div class="buttonclass">
+            <a class="7" href="">
+              <i class="fas fa-sd-card fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
       <!-- Timeblocks go here -->
@@ -164,13 +180,15 @@
           <h6 class="time">5:00pm</h6>
         </div>
         <div class="column-main">
-          <textarea id="story" class="story" name="story" rows="5" cols="33">
+          <textarea id="story" class="story" name="story" rows="4" cols="40">
           </textarea>
         </div>
         <div class="column-end">
-          <a class="8" href="">
-            <i class="fas fa-sd-card fa-4x"></i>
-          </a>
+          <div class="buttonclass">
+            <a class="8" href="">
+              <i class="fas fa-sd-card fa-3x"></i>
+            </a>
+          </div>
         </div>
       </div>
     </div>
